--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "com.cloudoki.imagedetectionplugin",
+  "name": "cordova-plugin-thierry",
   "version": "0.0.2",
   "description": "The ImageDetectionPlugin for Cordova enables the use of OpenCV SDK to detect an inputed image.",
   "cordova": {
-    "id": "com.cloudoki.imagedetectionplugin",
+    "id": "cordova-plugin-thierry",
     "platforms": [
       "android",
       "ios"
