--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    id="com.cloudoki.imagedetectionplugin"
+    id="cordova-plugin-thierry"
     version="0.0.2">
     <name>Image Detection Plugin</name>
 
@@ -29,7 +29,7 @@
     <platform name="android">
       <config-file target="res/xml/config.xml" parent="/*">
          <feature name="ImageDetectionPlugin">
-           <param name="android-package" value="com.cloudoki.imagedetectionplugin.ImageDetectionPlugin"/>
+           <param name="android-package" value="cordova-plugin-thierry.ImageDetectionPlugin"/>
            <param name="onload" value="true" />
          </feature>
       </config-file>
